--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,10 @@ php:
   - '5.6'
   - '7.0'
   - hhvm
+addons:
+  code_climate:
+    repo_token: 8b5f9bb7368f3a0ef6de0f381979cf80fc9887449513d9ffd9bb65a5a9f09492
 before_script: composer install
 script: vendor/bin/phpunit
+after_script:
+  - vendor/bin/test-reporter
