--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^4.8",
-    "there4/slim-test-helpers": "^2.1"
+    "there4/slim-test-helpers": "^2.1",
+    "codeclimate/php-test-reporter": "dev-master"
   },
   "autoload": {
     "psr-0": {
