--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,22 @@
 language: php
+
+sudo: false
+
 php:
   - '5.5'
   - '5.6'
   - '7.0'
   - hhvm
+
+cache:
+  directories:
+    - $HOME/.composer/cache
+
 addons:
   code_climate:
     repo_token: 8b5f9bb7368f3a0ef6de0f381979cf80fc9887449513d9ffd9bb65a5a9f09492
-before_script: composer install
+
+before_script: composer install --prefer-dist
 script: vendor/bin/phpunit
 after_script:
   - vendor/bin/test-reporter
